--- a/taskle/src/styles/inputField.css
+++ b/taskle/src/styles/inputField.css
@@ -54,6 +54,8 @@
   position: absolute;
   right: 15px;
   top: 50%;
+  width: 40px;
+  aspect-ratio: 1/1;
   transform: translateY(-50%);
   background: none;
   border: none;
