--- a/taskle/src/styles/registrationForm.css
+++ b/taskle/src/styles/registrationForm.css
@@ -19,7 +19,7 @@
   display: flex;
   width: 100%;
   height: 40px;
-  border: 1px solid black;
+  border: 1px solid var(--border-color);
   border-radius: 50px;
   overflow: hidden;
 }
@@ -31,6 +31,7 @@
   border: none;
   border-radius: 50px;
   cursor: pointer;
+  color: var(--text-color);
   background-color: transparent;
   transition: all 0.3s ease;
 }
