--- a/taskle/src/styles/navbar.css
+++ b/taskle/src/styles/navbar.css
@@ -22,6 +22,7 @@
   display: flex;
   align-items: center;
   color: var(--text-color);
+  cursor: pointer;
 }
 
 .logout-button {
@@ -34,6 +35,7 @@
   display: flex;
   align-items: center;
   gap: 5px;
+  cursor: pointer;
 }
 
 .logout-button:hover {
