--- a/taskle/src/styles/table.css
+++ b/taskle/src/styles/table.css
@@ -10,6 +10,7 @@ th {
   border-bottom: 1px solid #000000;
   padding: 20px;
   text-align: left;
+  height: 40px;
 }
 
 th:first-child,
@@ -20,13 +21,15 @@ td:first-child {
 th:nth-child(2),
 td:nth-child(2),
 th:nth-child(3),
-td:nth-child(3) {
-  width: auto;
+td:nth-child(3),
+th:nth-child(4),
+td:nth-child(4) {
+  width: 150px;
 }
 
 th:last-child,
 td:last-child {
-  width: 150px;
+  width: 50px;
 }
 
 .tag {
