--- a/taskle/src/styles/table.css
+++ b/taskle/src/styles/table.css
@@ -36,8 +36,9 @@ td:last-child {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  border: 1px solid var(--border-color);
   border-radius: 50px;
+  color: black;
   height: 40px;
   width: 130px;
   cursor: pointer;
@@ -51,18 +52,22 @@ td:last-child {
 
 .tag.none {
   opacity: 20%;
+  color: var(--text-color);
 }
 
 .tag.work {
   background-color: #ef89e7;
+  border-color: black;
 }
 
 .tag.personal {
   background-color: #fa713c;
+  border-color: black;
 }
 
 .tag.studying {
   background-color: #948af5;
+  border-color: black;
 }
 
 .select-wrapper {
@@ -72,13 +77,15 @@ td:last-child {
   height: 40px;
 }
 
+/* SELECT */
 .select {
-  border: 1px solid black;
+  border: 1px solid var(--border-color);
   border-radius: 50px;
   background-color: transparent;
   height: 40px;
   width: 130px;
   font-size: 16px;
+  color: var(--text-color);
   cursor: pointer;
 
   -webkit-appearance: none;
@@ -96,4 +103,10 @@ td:last-child {
   top: 50%;
   transform: translateY(-50%);
   pointer-events: none;
+}
+
+select option {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  padding: 0.5rem 1rem;
 }
