--- a/taskle/src/styles/table.css
+++ b/taskle/src/styles/table.css
@@ -7,7 +7,7 @@ table {
 
 td,
 th {
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid var(--border-color);
   padding: 20px;
   text-align: left;
   height: 40px;
