--- a/taskle/src/styles/table.css
+++ b/taskle/src/styles/table.css
@@ -147,3 +147,33 @@ thead th:last-child {
   padding-left: 20px;
   width: 100px;
 }
+
+/* priority */
+.priority {
+  position: relative;
+}
+
+.priority-selector {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 10px;
+}
+
+.priority-dot {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  cursor: pointer;
+  opacity: 0.4;
+  background-color: #000;
+  transition: all 0.2s ease;
+}
+
+.priority-dot.hovered {
+  opacity: 0.5;
+}
+
+.priority-dot.highlight {
+  opacity: 1;
+}
