--- a/taskle/src/styles/table.css
+++ b/taskle/src/styles/table.css
@@ -34,7 +34,12 @@ td:nth-child(4) {
   width: 90px;
 }
 
-thead th:last-child {
+th:nth-child(5),
+td:nth-child(5) {
+  width: 15px;
+}
+
+thead th:nth-child(4) {
   padding-left: 20px;
 }
 
@@ -203,4 +208,25 @@ thead th:last-child {
   font-size: 18px;
   width: 45px;
   aspect-ratio: 1/1;
+}
+
+/* delete */
+.delete-cell {
+  width: 80px;
+  text-align: right;
+  padding-right: 10px;
+}
+
+.delete-btn {
+  background: none;
+  border: none;
+  color: #e63946;
+  font-weight: 500;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.delete-btn:hover {
+  text-decoration: underline;
 }
