--- a/taskle/src/styles/table.css
+++ b/taskle/src/styles/table.css
@@ -1,9 +1,8 @@
 table {
-  max-width: 1500px;
   width: 100%;
   margin: 0 auto;
   border-collapse: collapse;
-  table-layout: fixed;
+  table-layout: auto;
 }
 
 td,
@@ -16,7 +15,7 @@ th {
 
 th:first-child,
 td:first-child {
-  width: 250px;
+  width: auto;
 }
 
 td:first-child p {
@@ -26,21 +25,29 @@ td:first-child p {
 }
 
 th:nth-child(2),
-td:nth-child(2),
+td:nth-child(2) {
+  width: 100px;
+}
+
 th:nth-child(3),
-td:nth-child(3),
+td:nth-child(3) {
+  width: 140px;
+  padding-left: 60px;
+}
+
 th:nth-child(4),
 td:nth-child(4) {
-  width: 90px;
+  width: 120px;
+  padding-left: 60px;
 }
 
 th:nth-child(5),
 td:nth-child(5) {
-  width: 15px;
+  width: 60px;
 }
 
 thead th:nth-child(4) {
-  padding-left: 20px;
+  padding-left: 80px;
 }
 
 .tag {
