--- a/taskle/src/styles/formModal.css
+++ b/taskle/src/styles/formModal.css
@@ -4,7 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.839);
+  backdrop-filter: blur(5px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +15,6 @@
 .form {
   background-color: white;
   width: 300px;
-  aspect-ratio: 1/1;
   border-radius: 30px;
   border: 1px solid black;
   padding: 40px;
@@ -38,12 +38,12 @@
   box-sizing: border-box;
   position: relative;
   outline: none;
-  color: var(--text-color);
   transition: border-color 0.3s ease;
 }
 
 .form textarea:focus {
   border-color: #52c86a;
+  color: var(--text-color);
 }
 
 .form label {
@@ -64,9 +64,31 @@
   color: #52c86a;
 }
 
+.form textarea.textarea-error {
+  border-color: #fa713c;
+}
+
+.form textarea.textarea-error + label {
+  color: #fa713c;
+}
+
 .form textarea:not(:placeholder-shown) + label {
   top: -8px;
   left: 15px;
   font-size: 12px;
   padding: 0 6px;
+}
+
+.close-btn {
+  width: 45px;
+  aspect-ratio: 1/1;
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  position: absolute;
+  color: white;
+  top: 20px;
+  right: 20px;
 }
