--- a/taskle/src/styles/formModal.css
+++ b/taskle/src/styles/formModal.css
@@ -13,7 +13,7 @@
 }
 
 .form {
-  background-color: white;
+  background-color: var(--bg-color);
   width: 300px;
   border-radius: 30px;
   border: 1px solid black;
@@ -32,6 +32,7 @@
   font-size: 14px;
   padding: 12px 10px;
   border: 1px solid var(--border-color);
+  background-color: var(--bg-color);
   border-radius: 8px;
   outline: none;
   line-height: 1.4;
@@ -53,7 +54,7 @@
   color: var(--text-color);
   pointer-events: none;
   transition: all 0.3s ease;
-  background-color: white;
+  background-color: var(--bg-color);
 }
 
 .form textarea:focus + label {
