--- a/taskle/src/styles/panel.css
+++ b/taskle/src/styles/panel.css
@@ -1,5 +1,25 @@
+.nav-panel {
+  display: flex;
+  margin-top: 50px;
+  margin-bottom: 10px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-panel-left {
+  display: flex;
+  gap: 10px;
+}
+
+.nav-panel-right {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+  flex: 1 1 auto;
+}
+
 .add-btn {
-  width: 120px;
+  width: 100px;
   border: 1px solid black;
   border-radius: 50px;
   font-size: 16px;
@@ -47,4 +67,46 @@
   background-color: transparent;
   border: none;
   color: black;
+}
+
+@media (max-width: 1250px) {
+  .add-btn {
+    width: 50px;
+    font-size: 18px;
+  }
+  .toggle-wrapper {
+    width: 220px;
+  }
+  .toggle-btn {
+    width: 110px;
+    font-size: 16px;
+  }
+}
+
+.filters-container {
+  display: flex;
+  gap: 10px;
+}
+
+@media (max-width: 900px) {
+  .nav-panel {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+  .nav-panel-left {
+    width: 100%;
+  }
+  .nav-panel-right {
+    width: 100%;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 480px) {
+  .nav-panel-right {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
 }
