--- a/taskle/src/styles/table.css
+++ b/taskle/src/styles/table.css
@@ -162,13 +162,15 @@ thead th:nth-child(4) {
   width: 100px;
 }
 
-.status-div-850 {
-  width: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid black;
-  border-radius: 50px;
+@media (max-width: 850px) {
+  .status-div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    border-radius: 50px;
+    padding: 0px;
+  }
 }
 
 .task-cell {
@@ -280,4 +282,14 @@ thead th:nth-child(4) {
   padding-bottom: 20px;
   padding-top: 20px;
   border-top: 1px solid black;
+}
+
+@media (max-width: 850px) {
+  .task-cell-content {
+    margin-bottom: 10px;
+  }
+
+  .task-textarea {
+    margin-bottom: 15px;
+  }
 }
