--- a/taskle/src/styles/table.css
+++ b/taskle/src/styles/table.css
@@ -284,6 +284,11 @@ thead th:nth-child(4) {
   border-top: 1px solid black;
 }
 
+.task-card-actions {
+  display: flex;
+  gap: 20px;
+}
+
 @media (max-width: 850px) {
   .task-cell-content {
     margin-bottom: 10px;
