--- a/taskle/src/styles/table.css
+++ b/taskle/src/styles/table.css
@@ -162,17 +162,6 @@ thead th:nth-child(4) {
   width: 100px;
 }
 
-@media (max-width: 850px) {
-  .status-div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid black;
-    border-radius: 50px;
-    padding: 0px;
-  }
-}
-
 .task-cell {
   padding-right: 80px;
 }
@@ -226,7 +215,8 @@ thead th:nth-child(4) {
 
 .task-textarea:focus {
   border-color: var(--border-color);
-  background-color: #f7f7f7;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 .edit-btn {
@@ -286,8 +276,8 @@ thead th:nth-child(4) {
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
-  padding-top: 20px;
-  border-top: 1px solid black;
+  padding-top: 5px;
+  border-top: 1px solid var(--border-color);
   position: relative;
   z-index: 1;
 }
@@ -302,12 +292,22 @@ thead th:nth-child(4) {
   gap: 20px;
 }
 
-@media (max-width: 850px) {
+@media (max-width: 900px) {
+  .status-div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--border-color);
+    border-radius: 50px;
+    padding: 0px;
+  }
+
   .task-cell-content {
     margin-bottom: 10px;
   }
 
   .task-textarea {
+    margin-top: 15px;
     margin-bottom: 15px;
   }
 
