delete button in desktop

--- a/taskle/src/styles/table.css
+++ b/taskle/src/styles/table.css
@@ -237,22 +237,18 @@ thead th:nth-child(4) {
 .delete-cell {
   width: 80px;
   text-align: right;
-  padding-right: 10px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .delete-btn {
-  background: none;
   border: none;
   cursor: pointer;
-  width: 45px;
-  aspect-ratio: 1/1;
   font-size: 18px;
-  color: var(--text-color);
-  background: transparent;
-}
-
-.delete-btn:hover {
-  transform: scale(105%);
+  width: 60px;
+  background-color: #d32f2f;
+  color: white;
+  height: 100%;
 }
 
 @media (max-width: 1000px) {
