--- a/taskle/src/styles/formModal.css
+++ b/taskle/src/styles/formModal.css
@@ -93,3 +93,12 @@
   pointer-events: auto;
   background-color: transparent;
 }
+
+.tag-label {
+  font-size: 12px;
+  color: var(--text-color);
+  text-transform: lowercase;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+}
